/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn more about Gradle by exploring our samples at https://docs.gradle.org/8.4/samples
 */

plugins {
  id 'java'
  id 'org.springframework.boot' version '3.2.4'
  id 'io.spring.dependency-management' version '1.1.4'
}

group = 'finos.traderx.trade-service'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations.all {
  exclude group: 'org.yaml', module: 'snakeyaml'
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'com.h2database:h2:2.2.224'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'

	implementation('org.json:json:20240303') {
		because 'previous versions are affected by multiple CVE'
	}
	implementation ('io.socket:socket.io-client:2.1.0') {
		exclude group: 'org.json', module: 'json'
	}

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
  useJUnitPlatform()
}
